# rainbowoification

./: .gitignore  Cargo.toml  run.ps1
src/: const_eval_tiem.rs  macros.rs  main.rs  nu_const_eval_sed.rs
