[package]
name = "rainbowoification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.8", features = ["rgb", "rayon"] }
indicatif = { version = "0.17.8", features = ["rayon", "improved_unicode"] }
oklab = "1.0.1"
rayon = "1.8.1"
num-traits = "0.2.18"
